--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -557,8 +557,16 @@ nav > ul li a:active {
 	pointer-events: none;
 }
 
-.phoneAppIcon {
+.phoneAppIconShadow {
 	display: none;
+}
+
+.phoneAppIcon {
+	display: block;
+	width: 100%;
+	height: 100%;
+	-webkit-clip-path: url(#shape120);
+	clip-path: url(#shape120);
 }
 
 .phoneScreenSlot {
@@ -643,7 +651,7 @@ nav > ul li a:active {
 		height: 505px;
 	}
 
-	.phoneAppIcon {
+	.phoneAppIconShadow {
 		position: absolute;
 		right: -24px;
 		bottom: -8px;
@@ -651,9 +659,8 @@ nav > ul li a:active {
 		display: block;
 		width: 120px;
 		height: 120px;
-		-webkit-clip-path: url(#shape120);
-		clip-path: url(#shape120);
 		filter: $drop-shadow;
+		overflow: visible;
 		pointer-events: none;
 	}
 	
@@ -679,7 +686,7 @@ nav > ul li a:active {
 		height: 437px;
 	}
 
-	.phoneAppIcon {
+	.phoneAppIconShadow {
 		right: -14px;
 		bottom: -6px;
 		width: 100px;
@@ -706,7 +713,7 @@ nav > ul li a:active {
 		height: 427px;
 	}
 
-	.phoneAppIcon {
+	.phoneAppIconShadow {
 		right: -14px;
 		bottom: -6px;
 		width: 96px;
